[regression, bisected] polaris10: *ERROR* Couldn't update BO_VA (-12) on MIPS64, PPC64, and maybe other non-4K-page systems
Brief summary of the problem:
When I opened something using OpenGL (for example, gtk3-demo's "OpenGL Area") under Xorg, Xorg hangs. The system (except the graphic) is still running and I could use ssh to get a dmesg.
Bisection suggests that "drm/amdgpu: nuke amdgpu_vm_bo_split_mapping v2" (a39f2a8d70666ef728497651a16bca4d23ec8816) is the first bad commit. Reverting it can fix this issue.
Hardware description:
- CPU: Loongson 3A4000 (MIPS64 EL)
- GPU: RX 550 (640 SP), with 4GB VRAM
- System Memory: 8 GB
- Display(s): AOC 273HU
- Type of Diplay Connection: HDMI
System infomration:
- Distro name and Version: Linux From Scratch
- Kernel version: 5.12.0-rc4+
- Custom kernel: Kernel from Linus' tree, commit e138138003eb3b3d06cc91cf2e8c5dec77e2a31e
- AMD package version: No package
How to reproduce the issue:
-
startx
in Linux console, -
gtk3-demo
in xterm, - Double click on
OpenGL Area
to start the demo, - Now Xorg hangs.
Attached files:
- Dmesg log: dmesg.log
- Xorg log Xorg.0.log
Edited by Xi Ruoyao